--- a/App/Views/drive/files.html
+++ b/App/Views/drive/files.html
@@ -196,12 +196,19 @@
                             <td>350KB</td>
                         </tr>
                     </table>
-
-                    <div class="notification is-info is-light">
-                        <button class="delete"></button>
-
-                        Enviando 'TODO.txt'...
-                        <i class="fas fa-spinner"></i>
+                    
+                    <div class="notification_icon">
+                        <div class="notification is-info is-light">
+                            <button class="delete"></button>
+    
+                            Enviando 'TODO.txt'...
+                            <i class="fas fa-spinner"></i>
+                        </div>
+                        <button class="button is-dark is-rounded">
+                            <span class="icon is-small">
+                                <i class="fas fa-plus"></i>
+                            </span>
+                        </button>
                     </div>
                 </div>
             </div>
