--- a/App/Views/dashboard/admin/admin_stats.html
+++ b/App/Views/dashboard/admin/admin_stats.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>profile</title>
+    <title>Stats</title>
 
     <link rel="stylesheet" href="../../../../public/assets/css/main.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
 
 </head>
 <body>
-    <div class="columns is-6-desktop">
-        <div class="column">
+    <div class="columns is-6-desktop is-fullheight">
+        <div class="column">    
             <nav class="navbar is-primary" role="navigation" aria-label="main navigation">
                 <div class="navbar-brand">
                     <a class="navbar-item" href="https://bulma.io">
@@ -23,7 +23,8 @@
                         <span>My Cloud</span>
                     </a>
 
-                    <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
+                    <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false"
+                        data-target="navbarBasicExample">
                         <span aria-hidden="true"></span>
                         <span aria-hidden="true"></span>
                         <span aria-hidden="true"></span>
@@ -36,7 +37,7 @@
                                 <p class="control has-icons-left">
                                     <input class="input is-rounded" type="text" placeholder="Search">
                                     <span class="icon is-small is-left">
-                                      <i class="fas fa-search"></i>
+                                        <i class="fas fa-search"></i>
                                     </span>
                                 </p>
                             </div>
@@ -62,9 +63,9 @@
 
                                         <div class="level-right">
                                             <div class="level-item">
-                                                  <span class="icon has-text-info">
+                                                <span class="icon has-text-info">
                                                     <i class="fa fa-plug"></i>
-                                                  </span>
+                                                </span>
                                             </div>
                                         </div>
                                     </div>
@@ -82,7 +83,7 @@
                             Utilizador
                         </p>
                         <li>
-                            <a href="#" class="has-background-grey-lighter is-flex is-align-items-center py-4 px-4">
+                            <a href="#" class="is-flex is-align-items-center py-4 px-4">
                                 <span class="icon mr-2">
                                     <i class="fas fa-user is-size-5"></i>
                                 </span>
@@ -92,7 +93,7 @@
 
 
                         <li>
-                            <a href="#" class=" is-flex is-align-items-center py-4 px-4">
+                            <a href="#" class="is-flex is-align-items-center py-4 px-4">
                                 <span class="icon mr-2">
                                     <i class="fas fa-chart-pie is-size-5"></i>
                                 </span>
@@ -105,7 +106,7 @@
                     </p>
                     <ul class="menu-list">
                         <li>
-                            <a href="#" class="is-flex is-align-items-center py-4 px-4">
+                            <a href="#" class=" is-flex is-align-items-center py-4 px-4">
                                 <span class="icon mr-2">
                                     <i class="fas fa-users is-size-5"></i>
                                 </span>
@@ -113,7 +114,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="#" class=" is-flex is-align-items-center py-4 px-4">
+                            <a href="#" class="has-background-grey-lighter is-flex is-align-items-center py-4 px-4">
                                 <span class="icon mr-2">
                                     <i class="fas fa-chart-pie is-size-5"></i>
                                 </span>
@@ -123,52 +124,10 @@
                     </ul>
                 </aside>
 
-                
-                <div class="column is-one-fifth my-4 mx-5">
-                    <h1 class="is-size-4 has-text-weight-bold mb-4">Alterar password</h1>
-                    <div class="field">
-                        <label for="" class="label mt-4">Nova password</label>
-                        <div class="control has-icons-left">
-                          <input type="password" placeholder="*******" class="input" required>
-                          <span class="icon is-small is-left">
-                            <i class="fa fa-lock"></i>
-                          </span>
-                        </div>
-                    </div>
-                    <div class="field">
-                        <label for="" class="label mt-4">Confirmar password</label>
-                        <div class="control has-icons-left mb-6">
-                          <input type="password" placeholder="*******" class="input" required>
-                          <span class="icon is-small is-left">
-                            <i class="fa fa-lock"></i>
-                          </span>
-                        </div>
-                    </div>
-                    <div class="field">
-                        <button class="button is-block is-fullwidth is-primary is-medium mb-6">
-                          Submeter
-                        </button>
-                    </div>
-
-                    <hr>
-
-                    <h1 class="is-size-4 has-text-weight-bold mb-4">Alterar nome</h1>
-                    <div class="field">
-                        <label for="" class="label mt-4">Novo nome</label>
-                        <div class="control has-icons-left mb-6">
-                          <input type="email" placeholder="e.g. Notorious B.I.G." class="input" required>
-                          <span class="icon is-small is-left">
-                            <i class="fa fa-user"></i>
-                          </span>
-                        </div>
-                      </div>
-                    <div class="field">
-                        <button class="button is-block is-fullwidth is-primary is-medium">
-                          Submeter
-                        </button>
-                    </div>
-                </div>   
-                
+                <div class="column is-one-fifth ml-4 mt-4">
+                    <h1 class="is-size-4 has-text-weight-bold">Utilização de espaço total</h1>
+                    <h1 class="is-size-4 has-text-weight-bold">Sistema</h1>
+                </div>
             </div>  
         </div>                 
     </div>        
