--- a/App/Views/drive/files.html
+++ b/App/Views/drive/files.html
@@ -13,132 +13,130 @@
 </head>
 
 <body>
-    <div class="columns is-6-desktop is-fullheight">
-        <div class="column">
-            <nav class="navbar is-primary" role="navigation" aria-label="main navigation">
-                <div class="navbar-brand">
-                    <a class="navbar-item" href="https://bulma.io">
-                        <span class="icon mr-2">
-                            <i class="fa fa-cloud"></i>
-                        </span>
+<nav class="navbar is-primary" role="navigation" aria-label="main navigation">
+    <div class="navbar-brand">
+        <a class="navbar-item" href="https://bulma.io">
+                    <span class="icon mr-2">
+                        <i class="fa fa-cloud"></i>
+                    </span>
 
-                        <span>My Cloud</span>
-                    </a>
+            <span>My Cloud</span>
+        </a>
 
-                    <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
-                        <span aria-hidden="true"></span>
-                        <span aria-hidden="true"></span>
-                        <span aria-hidden="true"></span>
-                    </a>
-                </div>
-                <div id="navbar" class="navbar-menu">
-                    <div class="navbar-end">
-                        <div class="navbar-item">
-                            <div class="field">
-                                <p class="control has-icons-left">
-                                    <input class="input is-rounded" type="text" placeholder="Search">
-                                    <span class="icon is-small is-left">
-                                      <i class="fas fa-search"></i>
-                                    </span>
-                                </p>
-                            </div>
-                        </div>
-
-                        <div class="navbar-item has-dropdown is-hoverable">
-                            <div class="navbar-link">
-                                User
-                            </div>
-
-                            <div id="moreDropdown" class="navbar-dropdown is-right">
-                                <a class="navbar-item " href="http://bulma.io/extensions/">
-                                    <div class="level is-mobile">
-                                        <div class="level-left">
-                                            <div class="level-item">
-                                                <p>
-                                                    <strong>Extensions</strong>
-                                                    <br>
-                                                    <small>Side projects to enhance Bulma</small>
-                                                </p>
-                                            </div>
-                                        </div>
-
-                                        <div class="level-right">
-                                            <div class="level-item">
-                                                  <span class="icon has-text-info">
-                                                    <i class="fa fa-plug"></i>
-                                                  </span>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </nav>
-
-            <section class="hero is-fullheighth"></section>
-            <div class="columns is-gapless is-fullheight">
-                <aside class="column is-2 menu ">
-                    <ul class="menu-list">
-                        <li>
-                            <a href="#" class="item active has-background-grey-lighter is-flex is-align-items-center py-4 px-4">
-                                <span class="icon mr-2">
-                                    <i class="fas fa-folder is-size-5"></i>
+        <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
+            <span aria-hidden="true"></span>
+            <span aria-hidden="true"></span>
+            <span aria-hidden="true"></span>
+        </a>
+    </div>
+    <div id="navbar" class="navbar-menu">
+        <div class="navbar-end">
+            <div class="navbar-item">
+                <div class="field">
+                    <p class="control has-icons-left">
+                        <input class="input is-rounded is-small" type="text" placeholder="Search">
+                        <span class="icon is-small is-left">
+                                  <i class="fas fa-search"></i>
                                 </span>
-                                <span class="name is-size-5">Ficheiros</span>
-                                <span class="tag is-white is-rounded ml-auto">1</span>
-                            </a>
-                        </li>
+                    </p>
+                </div>
+            </div>
 
-                        <li>
-                            <a href="#" class="item active is-flex is-align-items-center py-4 px-4">
-                                <span class="icon mr-2 is-size-5">
+            <div class="navbar-item has-dropdown is-hoverable">
+                <div class="navbar-link">
+                    User
+                </div>
+
+                <div id="moreDropdown" class="navbar-dropdown is-right">
+                    <a class="navbar-item " href="http://bulma.io/extensions/">
+                        <div class="level is-mobile">
+                            <div class="level-left">
+                                <div class="level-item">
+                                    <p>
+                                        <strong>Extensions</strong>
+                                        <br>
+                                        <small>Side projects to enhance Bulma</small>
+                                    </p>
+                                </div>
+                            </div>
+
+                            <div class="level-right">
+                                <div class="level-item">
+                                              <span class="icon has-text-info">
+                                                <i class="fa fa-plug"></i>
+                                              </span>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+</nav>
+
+<div class="hero is-fullheight-with-navbar">
+    <div class="columns is-gapless is-flex-grow-1">
+        <aside class="column is-2 menu is-flex is-flex-direction-column is-align-items-stretch">
+            <ul class="menu-list">
+                <li>
+                    <a href="#" class="item active has-background-grey-lighter is-flex is-align-items-center py-4 px-4">
+                                <span class="icon mr-2">
+                                    <i class="fas fa-folder is-size-6"></i>
+                                </span>
+                        <span class="name is-size-6">Ficheiros</span>
+                        <span class="tag is-white is-rounded ml-auto">1</span>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="#" class="item active is-flex is-align-items-center py-4 px-4">
+                                <span class="icon mr-2 is-size-6">
                                     <i class="fas fa-share"></i>
                                 </span>
-                                <span class="name is-size-5">Partilhados</span>
-                                <span class="tag is-white is-rounded ml-auto">1</span>
-                            </a>
-                        </li>
+                        <span class="name is-size-6">Partilhados</span>
+                        <span class="tag is-white is-rounded ml-auto">1</span>
+                    </a>
+                </li>
 
-                        <li>
-                            <a href="#" class="item active is-flex is-align-items-center py-4 px-4">
-                                <span class="icon mr-2 is-size-5">
+                <li>
+                    <a href="#" class="item active is-flex is-align-items-center py-4 px-4">
+                                <span class="icon mr-2 is-size-6">
                                     <i class="fas fa-star"></i>
                                 </span>
-                                <span class="name is-size-5">Favoritos</span>
-                                <span class="tag is-white is-rounded ml-auto">1</span>
-                            </a>
-                        </li>
-                    </ul>
+                        <span class="name is-size-6">Favoritos</span>
+                        <span class="tag is-white is-rounded ml-auto">1</span>
+                    </a>
+                </li>
+            </ul>
 
-                    <ul class="menu-list mt-auto">
-                        <li>
-                            <a href="#" class=" is-flex is-align-items-center is-justify-content-space-between py-4 px-4">
+            <ul class="menu-list mt-auto mb-4">
+                <li>
+                    <a href="#" class=" is-flex is-align-items-center is-justify-content-space-between py-4 px-4">
                                 <span class="icon mr-2 is-size-5">
                                     <i class="fas fa-trash"></i>
                                 </span>
-                                <span class="name is-size-5">Reciclagem</span>
-                                <span class="tag is-white is-rounded ml-auto">1</span>
-                            </a>
-                        </li>
+                        <span class="name is-size-5">Reciclagem</span>
+                        <span class="tag is-white is-rounded ml-auto">1</span>
+                    </a>
+                </li>
 
-                        <li>
-                            <p class="ml-2 mt-2 has-text-grey-light">2.4/6 GB utilizados</p>
-                        </li>
-                    </ul>
-                </aside>
-                <div class="column">
-                    <table class="table is-fullwidth">
-                        <tr class="has-text-grey-light">
-                            <td><label class="checkbox"><input type="checkbox"></label></td>
-                            <td>Nome</td>
-                            <td>Tamanho</td>
-                        </tr>
+                <li>
+                    <p class="ml-2 mt-2 has-text-grey-light">2.4/6 GB utilizados</p>
+                </li>
+            </ul>
+        </aside>
+        <div class="column">
+            <table class="table is-fullwidth">
+                <tr class="has-text-grey-light">
+                    <td><label class="checkbox"><input type="checkbox"></label></td>
+                    <td>Nome</td>
+                    <td>Tamanho</td>
+                </tr>
 
-                        <tr>
-                            <td><label class="checkbox"><input type="checkbox"></label></td>
-                            <td>
+                <tr>
+                    <td><label class="checkbox"><input type="checkbox"></label></td>
+                    <td>
                                 <span class="icon-text is-flex">
                                     <span class="icon">
                                         <i class="fas fa-file"></i>
@@ -192,29 +190,25 @@
                                         </div>
                                     </div>
                                 </span>
-                            </td>
-                            <td>350KB</td>
-                        </tr>
-                    </table>
-                    
-                    <div class="notification_icon">
-                        <div class="notification is-info is-light">
-                            <button class="delete"></button>
-    
-                            Enviando 'TODO.txt'...
-                            <i class="fas fa-spinner"></i>
-                        </div>
-                        <button class="button is-dark is-rounded">
+                    </td>
+                    <td>350KB</td>
+                </tr>
+            </table>
+
+            <div class="notification_icon">
+                <div class="notification is-info is-light">
+                    <button class="delete"></button>
+
+                    Enviando 'TODO.txt'...
+                    <i class="fas fa-spinner"></i>
+                </div>
+                <button class="button is-dark is-rounded">
                             <span class="icon is-small">
                                 <i class="fas fa-plus"></i>
                             </span>
-                        </button>
-                    </div>
-                </div>
+                </button>
             </div>
         </div>
     </div>
 </div>
-
-
 </body>
