--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -7869,23 +7869,13 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
 .right-border {
   border-right: 1px solid #dbdbdb; }
 
-.notification_icon {
-  display: flex;
-  flex-direction: row;
-  align-items: center; }
-
 .notification {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  align-self: flex-end;
-  max-width: 17rem;
-  max-height: 3rem; }
-
-.image_text {
-  display: flex;
-  flex-direction: row;
-  align-items: center; }
+  position: absolute;
+  top: 16px;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+  transform: translateX(-50%);
+  z-index: 99; }
 
 .row-checkbox {
   width: 1.4rem;
