--- a/public/assets/sass/main.scss
+++ b/public/assets/sass/main.scss
@@ -64,3 +64,10 @@ $menu-item-active-color: $text;
 .row-checkbox:checked {
   accent-color: currentColor;
 }
+
+.row-name {
+  width: 80%;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
