--- a/App/Views/drive/files.html
+++ b/App/Views/drive/files.html
@@ -122,7 +122,7 @@
                 </li>
 
                 <li>
-                    <p class="ml-2 mt-2 has-text-grey-light">2.4/6 GB utilizados</p>
+                    <p class="has-text-centered has-text-grey-light">2.4 / 6 GB utilizados</p>
                 </li>
             </ul>
         </aside>
