--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -7875,10 +7875,12 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
 .notification {
   position: absolute;
   top: 16px;
-  left: 50%;
-  -webkit-transform: translateX(-50%);
-  transform: translateX(-50%);
-  z-index: 99; }
+  z-index: 99;
+  margin: 0 auto;
+  left: 0;
+  right: 0;
+  max-width: 300px;
+  transition: opacity 0.5s; }
 
 .row-checkbox {
   width: 1.4rem;
