--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -7879,7 +7879,8 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
   margin: 0 auto;
   left: 0;
   right: 0;
-  max-width: 300px;
+  width: 80%;
+  max-width: 500px;
   transition: opacity 0.5s; }
 
 .row-checkbox {
