--- a/public/assets/sass/main.scss
+++ b/public/assets/sass/main.scss
@@ -62,7 +62,9 @@ $menu-item-active-color: $text;
   margin: 0 auto;
   left: 0;
   right: 0;
-  max-width: 300px;
+
+  width: 80%;
+  max-width: 500px;
 
   transition: opacity 0.5s;
 }
